tests/sqlcmd/baselines/errors/file_command3.outbaseline

FILE scripts/errors/file_command2.in
